# esp32p4_buoy_vision_lab

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CUSTOMER_REQUIREMENTS.md  README.md  TEST_ISSUES.md  build_rev31.ps1  build_tmp.ps1  flash_p4.ps1  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.rev31
components/example_video_common/: example_init_video.c
docs/: ai_model_reference_cn.md  coco_image_validation.md  coke_sprite_classifier_cn.md  customer_manual.md  developer_guide.md  model_benchmark_results_cn.md  model_deployment_guide.md  p4_buoy_user_operation_guide.docx  wired_transfer_plan.md  yolo26_espdl_route_cn.md  yujie_model_handoff.md  zeqi_hardware_handoff.md
main/: CMakeLists.txt  Kconfig.projbuild  avi_mjpeg_writer.c  avi_mjpeg_writer.h  camera_web_main.c  coco_espdl_bridge.cpp  coco_espdl_bridge.h  coke_sprite_mlp_model.h  fish31_cls_task.h  fish31_espdl_bridge.cpp  fish31_espdl_bridge.h  idf_component.yml  json_validator.c  json_validator.h  json_writer.c  json_writer.h  legacy_yolo_stubs.cpp  recording_enrichment.c  recording_enrichment.h  tiny_cls_espdl_bridge.cpp  tiny_cls_espdl_bridge.h  tiny_cls_task.h  usb_msc_export.c  usb_msc_export.h  validation_assets_config.h  yolo11_espdl_bridge.cpp  yolo11_espdl_bridge.h  yolo26_espdl_bridge.cpp  yolo26_espdl_bridge.h
models/: README.md  fish31_mbv3s_075_224_s8_p4.espdl  fish31_mbv3s_075_224_s8_p4.json  tiny_cls_xl_deep_192_6cls_s8_p4.espdl  tiny_cls_xl_deep_192_6cls_s8_p4.info  tiny_cls_xl_deep_192_6cls_s8_p4.json  yolo11_coke_sprite_416_s8_p4.espdl  yolo11_coke_sprite_416_s8_p4.json  yolo26_coke_sprite.espdl  yolo26_coke_sprite.json  yolo26_coke_sprite_o2o_416_official_min_s8_p4.espdl  yolo26_coke_sprite_o2o_416_official_min_s8_p4.json  yolo26_coke_sprite_o2o_416_official_noalign_s8_p4.espdl  yolo26_coke_sprite_o2o_416_official_noalign_s8_p4.json  yolo26_coke_sprite_o2o_416_official_shape_s8_p4.espdl  yolo26_coke_sprite_o2o_416_official_shape_s8_p4.json  yolo26_coke_sprite_o2o_416_s8_p4.espdl  yolo26_coke_sprite_o2o_416_s8_p4.json  yolo26_coke_sprite_raw_heads_416_allint8_p4.espdl  yolo26_coke_sprite_raw_heads_416_allint8_p4.json  yolo26_coke_sprite_raw_heads_416_official_noalign_s8_p4.espdl  yolo26_coke_sprite_raw_heads_416_official_noalign_s8_p4.json  yolo26_coke_sprite_raw_heads_416_official_s8_p4.espdl  yolo26_coke_sprite_raw_heads_416_official_s8_p4.json
test_assets/coco_video_demo/: SOURCE.md  manifest.jsonl  summary.json
test_assets/fish31_validation/: manifest.json
test_assets/phone_gallery/: coke_01.html  coke_02.html  coke_03.html  coke_04.html  coke_05.html  coke_06.html  coke_07.html  coke_08.html  coke_09.html  coke_10.html  coke_11.html  coke_12.html  index.html  sprite_01.html  sprite_02.html  sprite_03.html  sprite_04.html  sprite_05.html  sprite_06.html  sprite_07.html  sprite_08.html  sprite_09.html  sprite_10.html  sprite_11.html  sprite_12.html
test_assets/tinycls_marine_demo/: manifest.json
tools/: apply_component_patches.py  benchmark_usb_msc.ps1  capture_board_samples.py  capture_serial_log.py  capture_wake_crash.py  convert_yolo26_to_espdl.py  download_recordings_eth.ps1  eject_usb_msc.ps1  export_yolo26_raw_heads.py  open_board_url.ps1  prepare_coco_classic_samples.py  prepare_coco_tf_dataset.py  prepare_fish31_validation_assets.py  prepare_tinycls_lars_validation_assets.py  prepare_yolo26_dataset.py  quantize_yolo11_espdl.py  quantize_yolo26_official_pipeline.py  run_coco_video_eval.py  run_coco_video_validation.py  sample_status_latency.py  train_coke_sprite_classifier.py  train_yolo11_coke_sprite.py  train_yolo26_coke_sprite.py  watch_usb_msc.ps1
